@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="**/.*|**/.*/|JGlideMon.jar|componentset-1_5-eval/demo/src/|jgm/resources/images/classes/psd/|jgm/resources/images/psd/|lib_/|releases/|screenshots/|hat_bin/misc/net_dumper/" kind="src" path=""/>
+	<classpathentry excluding="**/.*|**/.*/|JGlideMon.jar|componentset-1_5-eval/demo/src/|jgm/resources/images/classes/psd/|jgm/resources/images/psd/|lib_/|releases/|screenshots/|hat_bin/misc/net_dumper/|buildtools/" kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/speech/freetts.jar"/>
 	<classpathentry kind="output" path="bin"/>
