@@ -11,6 +11,7 @@ status.updateinterval=500
 
 servers.0.name=Default
 servers.0.enabled=true
+servers.0.icon=0
 
 servers.0.general.lasttab=0
 
